--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "connect-mongo": "^5.1.0",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
+    "express-session": "^1.18.1",
     "http-errors": "^2.0.0",
-    "mongoose": "^8.8.3",
+    "mongoose": "^8.9.5",
     "shortid": "^2.2.8"
   },
   "devDependencies": {
